--- a/app/views/index/ilanver.html.erb
+++ b/app/views/index/ilanver.html.erb
@@ -147,7 +147,11 @@
 
 			</div>
 
-			<form class="form-basic" method="post" action="#">
+			<link href="/resources/plugins/dropzone/dropzone.css"
+						rel="stylesheet" type="text/css" />
+						<script src='/resources/plugins/dropzone/dropzone.js'></script>
+
+			<form class="form-basic dropzone" method="post" action="#">
 
 				<div class="form-title-row">
 					<h1>İlan Ver</h1>
@@ -202,13 +206,9 @@
 							<label> <span>Açıklama</span> 								<textarea name="textarea"></textarea> </label>
 						</div>
 
-						<link href="/resources/plugins/dropzone/dropzone.css"
-		rel="stylesheet" type="text/css" />
-						<script src='/resources/plugins/dropzone/dropzone.js'></script>
 						
+					
 						
-
-				
 
 						<div class="form-row">
 							<label> <span>Kullanım Koşullarını okudum ve kabul
