--- a/app/views/application/_ilankategoriler.html.erb
+++ b/app/views/application/_ilankategoriler.html.erb
@@ -36,13 +36,22 @@
 			<a href="#">Ders Notları</a>
 			<ul class="cute">
 				<li class="subitem1">
-					<a href="single.html">Cute Kittens </a>
+					<a href="single.html">Matematik </a>
 				</li>
 				<li class="subitem2">
-					<a href="single.html">Strange Stuff </a>
+					<a href="single.html">Fizik</a>
 				</li>
 				<li class="subitem3">
-					<a href="single.html">Automatic Fails</a>
+					<a href="single.html">Kimya</a>
+				</li>
+				<li class="subitem3">
+					<a href="single.html">Biyoloji</a>
+				</li>
+				<li class="subitem3">
+					<a href="single.html">Mühendislik</a>
+				</li>
+				<li class="subitem3">
+					<a href="single.html">Eğitim Bilimleri</a>
 				</li>
 			</ul>
 		</li>
@@ -50,30 +59,26 @@
 			<a href="#">Özel Ders</a>
 			<ul class="cute">
 				<li class="subitem1">
-					<a href="single.html">Cute Kittens </a>
+					<a href="single.html">Matematik </a>
 				</li>
 				<li class="subitem2">
-					<a href="single.html">Strange Stuff </a>
+					<a href="single.html">Fizik</a>
 				</li>
 				<li class="subitem3">
-					<a href="single.html">Automatic Fails</a>
+					<a href="single.html">Kimya</a>
+				</li>
+				<li class="subitem3">
+					<a href="single.html">Biyoloji</a>
+				</li>
+				<li class="subitem3">
+					<a href="single.html">Mühendislik</a>
+				</li>
+				<li class="subitem3">
+					<a href="single.html">Eğitim Bilimleri</a>
 				</li>
 			</ul>
 		</li>
 
-		<li class="item4">
-			<a href="#">Shoes</a>
-			<ul class="cute">
-				<li class="subitem1">
-					<a href="single.html">Cute Kittens </a>
-				</li>
-				<li class="subitem2">
-					<a href="single.html">Strange Stuff </a>
-				</li>
-				<li class="subitem3">
-					<a href="single.html">Automatic Fails </a>
-				</li>
-			</ul>
-		</li>
+		
 	</ul>
 </div>
