--- a/app/views/advert/evarkadasi.html.erb
+++ b/app/views/advert/evarkadasi.html.erb
@@ -133,6 +133,7 @@
 					padding-left: 50px;
 				padding-right: 50px;
 				padding-top:30px;
+				padding-bottom:30px;
 				}
 			}
 
@@ -240,8 +241,11 @@
 						<div class="single-para simpleCart_shelfItem">
 							<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
 							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+							<br>
+							
+							<div style="padding:10px; border:1px solid black;">
 							<div class="star-on">
-								<br><br>
+								
 								<h3>Kullanıcı Güven Oyu</h3>
 								<br>
 								<ul>
@@ -260,9 +264,12 @@
 							</div>
 							<br>
 							
-								<h3  class="add-to item_price">Fiyat: $32.8</h3>
+								<h4  class="add-to item_price">Fiyat: $32.8</h4><br>
 							
+							<h4  class="add-to item_price">İlan sahibinin telefonu: </h4> <br>
+							<h4> İlan sahibinin profili için <a href="#">buraya</a> tıklayınız. </h4><br>
 							
+							</div>
 								
 						</div>
 					</div>
@@ -326,6 +333,7 @@
 <!----->
 <div class="col-md-3 product-bottom">
 			<!--categories-->
+				
 				<%= render 'ilankategoriler'%>
 				
 				<!--initiate accordion-->
