--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer
-style="clear: both; float: bottom; background-color: #E1E1E3; padding: 30px;">
+style="margin-left:20px;clear: both; float: bottom; background-color: #E1E1E3; padding: 30px;">
 
 	<div class="row">
 
