--- a/app/views/application/_headerfixed.html.erb
+++ b/app/views/application/_headerfixed.html.erb
@@ -7,7 +7,7 @@
 		</h1>
 
 		<nav>
-			<a href="/">Babasayfa</a> <a href="/hakkimizda">Hakkımızda</a> <a href="/iletisim">İletişim</a>
+			<a href="/">Anasayfa</a> <a href="/hakkimizda">Hakkımızda</a> <a href="/iletisim">İletişim</a>
 			<a href="/yardim">Yardım</a>
 
 		</nav>
