--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -10,7 +10,7 @@
 					<a  class="panellinkler" id="profilim" href='/uye/<%= current_user.username%>?profilim=1'><span>Profilim</span></a>
 				</li>
 				<li>
-					<a class="panellinkler" id="ilanver" href='/uye/<%= current_user.username%>?ilanver=1'><span>İlan Ver</span></a>
+					<a  id="ilanver" href='/ilanver'><span>İlan Ver</span></a>
 				</li>
 				<li class='last'>
 					<a class="panellinkler" id="satislarim" href='/satis-alis/satislarim'><span>Satışlarım</span></a>
