--- a/app/views/application/_smartmenus.html.erb
+++ b/app/views/application/_smartmenus.html.erb
@@ -3,7 +3,7 @@
 	<div style="">
 
 		<ul id="main-menu" class="sm sm-blue" style="border-radius: 0">
-			<li><a href="/">Babasayfa</a></li>
+			<li><a href="/">Anasayfa</a></li>
 			<li><a href="/kategoriler">Kategoriler</a>
 				<ul>
 					<li><a href="/kategoriler/ikincielilan">İkinci El İlan</a></li>
