--- a/app/views/index/ilanver.html.erb
+++ b/app/views/index/ilanver.html.erb
@@ -180,7 +180,7 @@
 		    
 
 					<div class="form-row">
-						<label> <span>Kategori</span>
+						<label> <span>Alt Kategori</span>
 							<%= field.select :category, [['Beyaz Eşya', 'beyazesya'], ['Ev Dekorasyon',
 								'evdekorasyon'], ['Müzik Aletleri', 'muzikaletleri'], ['Kırtasiye', 'kirtasiye'],
 								['Mutfak Eşyaları', 'mutfakesyalari'], ['Diğer', 'diger']],{}, {}  %>
