--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -401,7 +401,7 @@
 																</tbody>
 															</table>
 
-															<a href="#" class="col-lg-5 btn btn-primary">İlan Ver</a>
+															<a href="/ilanver" class="col-lg-5 btn btn-primary">İlan Ver</a>
 															<a href="#" style="margin-left: 20px;"
 															class="col-lg-5 btn btn-primary">Önceki İlanlarım</a>
 														</div>
