--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,5 +1,4 @@
-<footer
-style="margin-left:20px;clear: both; float: bottom; background-color: #E1E1E3; padding: 30px;">
+<footer class="row" style="clear: both; float: bottom; background-color: #E1E1E3; padding: 30px;">
 
 	<div class="row">
 
@@ -100,7 +99,7 @@ style="margin-left:20px;clear: both; float: bottom; background-color: #E1E1E3; p
 
 </footer>
 
-<div>
+<div class="row">
 
 	<p style="float: right; margin-right: 20px; margin-top: 5px;">
 		©2015 CAMPUS İLAN&nbsp;&nbsp;&nbsp;&nbsp;<a
