--- a/app/views/index/iletisim.html.erb
+++ b/app/views/index/iletisim.html.erb
@@ -216,13 +216,17 @@
 
 			</div>
 
-			<!-- responsive header -->
-
-			<%= render "headerfixedjs" %>
+			<div class="row">
 
 			<%= render "footer" %>
+			
+			</div>
 
 		</div>
+		
+		<!-- responsive header -->
+
+			<%= render "headerfixedjs" %>
 
 	</body>
 
