--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -155,6 +155,7 @@
 			</div>
 
 			<!-- Geniş ekranda gözüken div -->
+			<div class="row">
 
 			<div class="ustkisim row hidden-md hidden-sm hidden-xs">
 
@@ -500,6 +501,8 @@
 
 				</div>
 
+			</div>
+			
 			</div>
 
 			<div class="row visible-lg">
@@ -987,8 +990,7 @@
 
 			</div>
 
-			<div class="row hidden-lg"
-			style="padding-left: 20px; padding-right: 20px;">
+			<div class="row hidden-lg" style="padding-left: 20px; padding-right: 20px;">
 
 				<div class="panel panel-info">
 
@@ -2599,7 +2601,7 @@
 
 			</div>
 
-			<!-- plugin script inportları: -->
+			<!-- plugin script importları: -->
 
 			<!-- JCarousel Plugin -->
 
