--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -50,6 +50,43 @@
 
 		<link rel="stylesheet" href="/resources/plugins/cssmenu-3/styles.css">
 		<script src="/resources/plugins/cssmenu-3/script.js"></script>
+		
+		<!-- Arama Kutucuğu-->
+
+		<link href="/resources/css/searchbox.css" rel="stylesheet"
+		type="text/css" />
+
+		<script src="/resources/js/modernizer.js"></script>
+		
+		<!-- Smart Menus plugin -->
+
+		<!-- jQuery import -->
+		<script src="resources/plugins/smartmenus/libs/jquery/jquery.js"
+		type="text/javascript"></script>
+
+		<script>
+			var smartmenus = jQuery.noConflict();
+		</script>
+
+		<!-- SmartMenus jQuery plugin -->
+		<script src="resources/plugins/smartmenus/jquery.smartmenus.js"
+		type="text/javascript"></script>
+
+		<!-- SmartMenus core CSS (required) -->
+		<link href="resources/plugins/smartmenus/css/sm-core-css.css"
+		rel="stylesheet" type="text/css" />
+		<!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
+		<link href="resources/plugins/smartmenus/css/sm-blue/sm-blue.css"
+		rel="stylesheet" type="text/css" />
+
+		<!-- SmartMenus jQuery init -->
+		<script>
+			smartmenus(document).ready(function() {
+				smartmenus('#main-menu').smartmenus();
+			});
+		</script>
+		
+		
 
 		<!-- end of plugins  -->
 
@@ -108,38 +145,9 @@
 
 			</div>
 
-			<div class="row headernav" style="margin-top: 5px;">
+			<div class="row">
 
-				<div class="headernav"
-				style="background: #E6F3FF; border: 1px solid black; margin-top: 10px; padding: 7px; -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px;">
-
-					<ul class="nav nav-pills">
-						<li>
-							<a href="/firsatlar?acililanlar=1">Acil İlanlar</a>
-						</li>
-						<li>
-							<a href="/firsatlar?gununfirsatlari=1">Günün Fırsatları</a>
-						</li>
-						<li>
-							<a href="/firsatlar?enpopulerilanlar=1">En Popüler İlanlar</a>
-						</li>
-						<li>
-							<a href="/firsatlar?ensonilanlar=1">En Son İlanlar</a>
-						</li>
-						<li>
-							<a href="/firsatlar?fiyatidusenler=1">Fiyatı Düşenler</a>
-						</li>
-						<li>
-							<a href="/saticilar?enguvenilirsaticilar=1">En Güvenilir Satıcılar</a>
-						</li>
-
-						<li>
-							<a href="/saticilar?enyakindaolansaticilar=1">En Yakında Olan Satıcılar</a>
-						</li>
-
-					</ul>
-
-				</div>
+				<%= render "smartmenus" %>
 
 			</div>
 
