--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="row" style="clear: both; float: bottom; background-color: #E1E1E3; padding: 30px;">
+<footer class="" style="clear: both; float: bottom; background-color: #E1E1E3; padding: 30px;">
 
 	<div class="row">
 
