--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -51,6 +51,42 @@
 
 		<link rel="stylesheet" href="resources/plugins/cssmenu-3/styles.css">
 		<script src="resources/plugins/cssmenu-3/script.js"></script>
+		
+		
+		<!-- Arama Kutucuğu-->
+
+		<link href="/resources/css/searchbox.css" rel="stylesheet"
+		type="text/css" />
+
+		<script src="/resources/js/modernizer.js"></script>
+
+		<!-- Smart Menus plugin -->
+
+		<!-- jQuery import -->
+		<script src="resources/plugins/smartmenus/libs/jquery/jquery.js"
+		type="text/javascript"></script>
+
+		<script>
+			var smartmenus = jQuery.noConflict();
+		</script>
+
+		<!-- SmartMenus jQuery plugin -->
+		<script src="resources/plugins/smartmenus/jquery.smartmenus.js"
+		type="text/javascript"></script>
+
+		<!-- SmartMenus core CSS (required) -->
+		<link href="resources/plugins/smartmenus/css/sm-core-css.css"
+		rel="stylesheet" type="text/css" />
+		<!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
+		<link href="resources/plugins/smartmenus/css/sm-blue/sm-blue.css"
+		rel="stylesheet" type="text/css" />
+
+		<!-- SmartMenus jQuery init -->
+		<script>
+			smartmenus(document).ready(function() {
+				smartmenus('#main-menu').smartmenus();
+			});
+		</script>
 
 		<!-- end of plugins  -->
 
@@ -107,47 +143,17 @@
 				<%= render "headerfixed" %>
 
 			</div>
+			
+			
+			<div class="row">
 
-			<div class="row" style="margin-top: 5px;">
-
-				<div>
-
-					<div class="row headernav"
-					style="background: #E6F3FF; border: 1px solid black; margin-top: 10px; padding: 7px; -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px;">
-
-						<ul class="nav nav-pills">
-							<li>
-								<a href="#">Acil İlanlar</a>
-							</li>
-							<li>
-								<a href="#">Günün Fırsatları</a>
-							</li>
-							<li>
-								<a href="#">En Popüler İlanlar</a>
-							</li>
-							<li>
-								<a href="#">En Son İlanlar</a>
-							</li>
-							<li>
-								<a href="#">Fiyatı Düşenler</a>
-							</li>
-							<li>
-								<a href="#">En Güvenilir Satıcılar</a>
-							</li>
-							<li>
-								<a href="#">En Yakında Olan Satıcılar</a>
-							</li>
-
-						</ul>
-
-					</div>
-
-				</div>
+				<%= render "smartmenus" %>
 
 			</div>
 
-			<div class="row"
-			style="height: 60%; padding-bottom: 20px; margin-bottom: 30px; margin-top: 30px;">
+			
+
+			<div class="row hidden-xs hidden-sm" style="height: 60%; padding-bottom: 20px; margin-bottom: 30px; margin-top: 30px;">
 
 				<div class="row" style="padding-left: 20px; padding-right: 20px;">
 
@@ -184,7 +190,7 @@
 					style="padding-left: 20px; padding-right: 20px">
 
 						<div class="col-md-12">
-							<h4>Bootstrap Snipp for Datatable</h4>
+							<h4>Mesajlarım</h4>
 							<div class="table-responsive">
 
 								<table id="mytable" class="table table-bordred table-striped">
@@ -194,14 +200,14 @@
 										<th>
 										<input type="checkbox" id="checkall" />
 										</th>
-										<th>First Name</th>
-										<th>Last Name</th>
-										<th>Address</th>
-										<th>Email</th>
-										<th>Contact</th>
-										<th>Edit</th>
+										<th>Ad</th>
+										<th>Soyad</th>
+										<th>Adres</th>
+										<th>E-posta</th>
+										<th>Telefon</th>
+										<th>Düzenle</th>
 
-										<th>Delete</th>
+										<th>Sil</th>
 									</thead>
 									<tbody>
 
@@ -453,8 +459,14 @@
 					</div>
 
 				</div>
+				
+				</div>
+				
+				<div class="row">
 
 				<%= render "footer" %>
+				
+				</div>
 
 			</div>
 
