--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -12,6 +12,7 @@
 
 		<!--plugins: -->
 
+
 		<!-- dropdown login box -->
 
 		<link rel="stylesheet"
@@ -27,6 +28,8 @@
 		rel='stylesheet' type='text/css'>
 
 		<!-- Fixed Header sonu -->
+		
+		<!-- Arama Kutucuğu-->
 
 		<link href="resources/css/searchbox.css" rel="stylesheet"
 		type="text/css" />
